# churn-data-pipeline

./: .dockerignore  .gitignore  Makefile  QUICKSTART.md  README.md  docker-compose.yml  main.py  pyproject.toml
scripts/: calculate_metrics.py  cleanup.py  create_dataset.py  load_data.py  run_analysis.py  run_dataset.py  run_metrics.py  setup_db.ps1  setup_db.sh
sql/: create_metric_tables.sql  create_schema.sql  current_customer_dataset.sql  events_per_account.sql  events_per_day.sql  insert_count_metric.sql  metric_coverage.sql  metric_stats_over_time.sql
src/: __init__.py  calculate_metrics.py  cleanup.py  create_dataset.py  database.py  dataset_stats.py  load_data.py  metric_analysis.py  run_analysis.py  run_dataset.py  run_metrics.py  visualize_events.py
